force-app/main/default/objects/ON24_Registrant__c/ON24_Registrant__c.object-meta.xml
<CustomObject>
    <label>ON24 Registrant</label>
    <nameField>
        <displayFormat>REG{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ON24 Registrants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>