force-app/main/default/objects/ON24_Registrant__c/fields/BROWSER__c.field-meta.xml
<CustomField>
    <fullName>BROWSER__c</fullName>
    <label>BROWSER</label>
    <length>64</length>
    <type>Text</type>
</CustomField>