force-app/main/default/objects/ON24_Registrant__c/fields/IS_BLOCKED__c.field-meta.xml
<CustomField>
    <fullName>IS_BLOCKED__c</fullName>
    <label>IS BLOCKED</label>
    <length>4</length>
    <type>Text</type>
</CustomField>