force-app/main/default/objects/ON24_Registrant__c/fields/OS__c.field-meta.xml
<CustomField>
    <fullName>OS__c</fullName>
    <label>OS</label>
    <length>64</length>
    <type>Text</type>
</CustomField>