force-app/main/default/objects/ON24_Registrant__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>64</length>
    <type>Text</type>
</CustomField>